MDEV-6239: Partition pruning is not working as expected in an inner query - Make partition pruning work for tables inside semi-join nests   (the new condition is the same that range optimizer uses so    it should be ok)